--- a/res/values-da/strings.xml
+++ b/res/values-da/strings.xml
@@ -1841,7 +1841,7 @@
     <string name="location_category_location_services" msgid="8163798686832434284">"Lokationstjenester"</string>
     <string name="location_title" msgid="5819154746934945021">"Min lokation"</string>
     <string name="managed_profile_location_switch_title" msgid="1265007506385460066">"Lokation for arbejdsprofil"</string>
-    <string name="location_app_level_permissions" msgid="907206607664629759">"Placeringstilladelser for apps"</string>
+    <string name="location_app_level_permissions" msgid="907206607664629759">"Adgangstilladelse til lokation for apps"</string>
     <string name="location_app_permission_summary_location_off" msgid="2711822936853500335">"Lokation er slået fra"</string>
     <plurals name="location_app_permission_summary_location_on" formatted="false" msgid="8286873148858526214">
       <item quantity="one"> <xliff:g id="PERMITTED_LOCATION_APP_COUNT_2">%1$d</xliff:g> ud af <xliff:g id="TOTAL_LOCATION_APP_COUNT_3">%2$d</xliff:g> app har adgang til din lokation</item>
