--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -12191,7 +12191,7 @@
     <!-- Title of setting on security settings screen on a financed device. This will take the user to a screen with information about what a device administrator can control and their impact on the user's privacy on a financed device. Shown on financed-managed devices only. [CHAR LIMIT=NONE] -->
     <string name="financed_privacy_settings">Financed device info</string>
     <!-- Top introduction on the financed device privacy settings, summarizing the changes a credit provider can make to a financed device. [CHAR LIMIT=NONE] -->
-    <string name="financed_privacy_intro">Your credit provider can change settings and install software on this device.\n\nIf you miss a payment, your device will be locked.\n\nTo learn more, contact your credit provider.</string>
+    <string name="financed_privacy_intro">Your credit provider can change settings and install software on this device during setup.\n\nIf you miss a payment, your credit provider can lock your device and change device settings.\n\nTo learn more, contact your credit provider.</string>
     <!-- Section header. This section shows what restrictions will be enforced on the device when it is financed. [CHAR LIMIT=60] -->
     <string name="financed_privacy_restrictions_category">If your device is financed, you can\u2019t:</string>
     <!-- Label explaining that installing apps from unknown sources beyond Play Store. [CHAR LIMIT=60]-->
@@ -12208,8 +12208,8 @@
     <string name="financed_privacy_credit_provider_capabilities_category">Your credit provider can:</string>
     <!-- Label explaining that IMEI can be access by the credit provider. [CHAR LIMIT=40] -->
     <string name="financed_privacy_IMEI">Access your IMEI number</string>
-    <!-- Label explaining that device can be reset and data can be deleted. [CHAR LIMIT=40]-->
-    <string name="financed_privacy_factory_reset">Factory reset your device</string>
+    <!-- Label explaining that device can be reset and data can be deleted. [CHAR LIMIT=80]-->
+    <string name="financed_privacy_factory_reset">Factory reset your device if something goes wrong</string>
     <!-- Section header. This section shows what the user can do if the device is locked by the credit provider. [CHAR LIMIT=100] -->
     <string name="financed_privacy_locked_mode_category">If your device is locked, you can only use it to:</string>
     <!-- Label explaining that calling emergency numbers. [CHAR LIMIT=40]-->
